--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&family=Manufacturing+Consent&display=swap" rel="stylesheet">
     <title>Joken-Pô</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,8 +21,8 @@
 
         <p class="result"></p>
 
-        <p class="your-score">Sua pontuação: <span>0</span></p>
-        <p class="machine-score">Pontuação da máquina: <span>0</span></p>
+        <p class="your-score">&#x1F468; <span>0</span></p>
+        <p class="machine-score">&#x1F916; <span>0</span></p>
 
     </main>
 </body>
